# KToolBox

./: .coveragerc  .env.test  .gitignore  .readthedocs.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  KEYWORD_FILTERING_EXAMPLES.md  LICENSE  README.md  README_fr.md  README_ja.md  README_ko.md  README_ru.md  README_zh-CN.md  README_zh-Hant.md  REVISION_SUPPORT.md  SECURITY.md  demo_colorama_progress.py  example.env  ktoolbox.spec  mkdocs.yml  mkdocs.yml.backup  pyproject.toml  requirements-pip.txt  requirements.txt  test_external_links_fix.py  test_revision.py  test_webui.py  versions.json
.github/: FUNDING.yml  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: codecov.yml  docs.yml  python-package.yml  python-publish.yml  quality.yml  release.yml  translate.yml  winget-publish.yml
0.1/zh/: index.html
0.2.2/: 404.html  index.html  sitemap.xml
0.2.2/0.2.2/: index.html
0.2.2/about-kemono/: index.html
0.2.2/api/: index.html
0.2.2/commands/: index.html
0.2.2/more/: index.html
0.2.2/search/: search_index.json
0.2.2/shortcut/: index.html
0.2.2/zh/: index.html
devel/: 404.html  index.html  sitemap.xml
devel/more/: index.html
devel/shortcut/: index.html
docs/: PROGRESS_DISPLAY.md  index.md  integrity-verification.md  more.md  webui.md
docs/configuration/: guide.md
docs/en/: about-kemono.md  about-pawchive.md  api.md  commands.md  coomer.md  faq.md  index.md  migration-v1.md  more.md  shortcut.md  webui.md
docs/fr/: about-pawchive.md  api.md  faq.md  index.md  migration-v1.md  more.md  webui.md
docs/ja/: about-pawchive.md  api.md  faq.md  index.md  migration-v1.md  more.md  webui.md
docs/ko/: about-pawchive.md  api.md  faq.md  index.md  migration-v1.md  more.md  webui.md
docs/ru/: about-pawchive.md  api.md  faq.md  index.md  migration-v1.md  more.md  webui.md
docs/translations/: README.md  USAGE.md  api_translations.json
docs/zh/: about-kemono.md  about-pawchive.md  api.md  commands.md  coomer.md  faq.md  index.md  migration-v1.md  more.md  shortcut.md  webui.md
docs/zh-Hant/: about-pawchive.md  api.md  faq.md  index.md  migration-v1.md  more.md  webui.md
docs_handlers/: __init__.py  python_translator.py  translation_plugin.py
frontend/: .gitignore  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
k_generator/: datamodel-codegen-example.cmd  kemono_openapi.json  main.py  normalize.py  pawchive_openapi.json  pawchive_openapi.normalized.json  pawchive_openapi.overrides.json
k_tool_box/: __init__.py  __main__.py  cli.py  configuration.py  enum.py  utils.py
k_tool_box/action/: __init__.py  base.py  search_creator.py
k_tool_box/api/: __init__.py  base.py  enum.py  utils.py
ktoolbox/: __init__.py  __main__.py  _cli_zh.py  _configuration_zh.py  _enum.py  cli.py  cli_app.py  configuration.py  ddos_guard.py  editor.py  enum.py  exceptions.py  failures.py  model.py  progress.py  project_config.py  queue.py  reporting.py  sync.py  utils.py  webui.py
ktoolbox/action/: __init__.py  base.py  fetch.py  job.py  search.py  search_creator.py  utils.py
ktoolbox/api/: __init__.py  base.py  client.py  errors.py  parameters.py  utils.py
ktoolbox/blocker/: __init__.py  engine.py  field_match.py  model.py
ktoolbox/downloader/: __init__.py  base.py  downloader.py  utils.py
ktoolbox/job/: __init__.py  model.py  runner.py  stream.py  utils.py
ktoolbox/webui/: __init__.py  app.py  auth.py  config_locale_catalogs.py  config_monitor.py  config_schema.py  config_store.py  creator_profiles.py  database.py  error_responses.py  event_store.py  filesystem.py  filesystem_routes.py  mcp_routes.py  mcp_server.py  mcp_tokens.py  models.py  openapi_contract.py  pawchive_routes.py  project_lock.py  project_routes.py  server.py  task_executor.py  task_models.py  task_reporter.py  task_routes.py  task_scheduler.py  task_store.py
master/: 404.html  index.html  objects.inv  sitemap.xml
master/PROGRESS_DISPLAY/: index.html
master/about-kemono/: index.html
master/api/: index.html
master/commands/: index.html
master/coomer/: index.html
master/faq/: index.html
master/more/: index.html
master/search/: search_index.json
master/shortcut/: index.html
master/zh/: index.html
scripts/: check_webui_wheel.py  export_webui_openapi.py  generate_config_locale_catalogs.py  test_translation.py  translate_docs.py
shortcuts/: Download Kemono Post.shortcut  KToolBox Manager.shortcut  KToolBox 管理器.shortcut  下载 Kemono 作品.shortcut
tests/: .coveragerc  conftest.py  test_keyword_filter.py  utils.py  webui_e2e_server.py
tests/ktoolbox/: test_action_job.py  test_action_utils.py  test_actions.py  test_api_client.py  test_api_contract.py  test_api_ddos_integration.py  test_api_utils.py  test_attachments_dirname_format.py  test_basic_file_size_filter.py  test_blocker.py  test_cli.py  test_cli_app.py  test_configuration.py  test_configuration_ddos.py  test_content_images.py  test_content_images_integration.py  test_ddos_e2e.py  test_ddos_guard.py  test_docs_i18n.py  test_download_file_attachment_config.py  test_downloader.py  test_downloader_integrity.py  test_downloader_utils.py  test_external_links.py  test_failures.py  test_file_size_filter.py  test_file_size_filter_integration.py  test_job_filename.py  test_job_post_context.py  test_job_runner.py  test_job_stream.py  test_keyword_filter.py  test_main.py  test_metadata_preservation.py  test_models.py  test_progress.py  test_project_config.py  test_queue.py  test_reporting.py  test_revision.py  (+19 more)
webui/: eslint.config.js  index.html  openapi.json  openapi.yaml  package-lock.json  package.json  playwright.config.ts  tsconfig.app.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
webui/e2e/: i18n-visual-audit.spec.ts  realtime.spec.ts  webui.spec.ts
webui/src/: App.test.tsx  App.tsx  TaskPosts.test.tsx  Workflows.test.tsx  main.tsx  styles.css  types.ts
コハル　表情、効果音差分/: post.json
左藤空気/『純潔聖女キスティアナ』始動します！！/: content.txt  (+1 more)
文化祭打ち上げの裏ワザ/: content.txt
(+323 files in other folders)
