[tool.poetry]
name = "ktoolbox"
version = "v0.19.1"
description = "A useful CLI tool for downloading posts in Kemono.cr / .su / .party"
authors = ["Ljzd-PRO <me@ljzd.link>"]
readme = "README.md"
homepage = "https://ktoolbox.readthedocs.io/"
repository = "https://github.com/Ljzd-PRO/KToolBox"
documentation = "https://ktoolbox.readthedocs.io/"
license = "BSD-3-Clause"

keywords = ["kemono", "kemono.cr", "kemono.su", "kemono.party", "cli-app", "downloader", "os-independent"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Development Status :: 5 - Production/Stable",
    "Topic :: Terminals",
]

packages = [{ include = "ktoolbox" }]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/Ljzd-PRO/KToolBox/issues"

[tool.poetry.scripts]
ktoolbox = "ktoolbox.__main__:main"

[tool.poetry.dependencies]
python = ">=3.8.1,<3.14"
pydantic = "^2.4.2"
pydantic-settings = "^2.0.3"
tenacity = ">=8.2.3,<10.0.0"
httpx = {version=">=0.24.1,<0.29.0", extras=["socks"]}
fire = ">=0.5,<0.8"
tqdm = "^4.66.1"
loguru = "^0.7.2"
aiofiles = "^23.2.1"
pathvalidate = "^3.2.0"
settings-doc = "^4.3.1"
uvloop = {version=">=0.19,<0.22", optional=true, markers = "sys_platform != 'win32'"}
winloop = {version=">=0.1.6", optional=true, markers = "sys_platform == 'win32'"}
urwid = [
    {version="^2.6.16", optional=true, markers = "sys_platform != 'win32'"},
    {version="^2.6.16", extras=["curses"], optional=true, markers = "sys_platform == 'win32'"}
]

[tool.poetry.group.pyinstaller.dependencies]
pyinstaller = "==6.15.0"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.5.3"
mkdocs-static-i18n = "^1.2.0"
mkdocs-material = "^9.4.14"
mkdocstrings = {version=">=0.24,<0.27", extras=["python"]}
mike = "^2.0.0"

[tool.poetry.group.test.dependencies]
pytest = "==8.3.3"
pytest-asyncio = "==0.23.5"
pytest-cov = "==4.1.0"
allpairspy = "==2.5.1"

[tool.poetry.group.dev.dependencies]
datamodel-code-generator = ">=0.22.1,<0.24.0"

[tool.poetry.group.pyinstaller]
optional = true

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.test]
optional = true

[tool.poetry.group.dev]
optional = true

[tool.poetry.extras]
uvloop = ["uvloop"]
winloop = ["winloop"] 
urwid = ["urwid"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
