[project]
name = "ktoolbox"
version = "v1.0.0"
description = "An asynchronous CLI and typed Python client for downloading public Pawchive posts"
authors = [{ name = "Ljzd-PRO", email = "me@ljzd.link" }]
readme = "README.md"
license = "BSD-3-Clause"
requires-python = ">=3.10,<=3.14"
dependencies = [
    "pydantic>=2.4.2,<3.0.0",
    "pydantic-settings>=2.0.3,<3.0.0",
    "tenacity>=8.2.3,<10.0.0",
    "httpx[socks]>=0.24.1,<0.29.0",
    "cyclopts>=4.21.1,<5.0.0",
    "loguru>=0.7.2,<0.8.0",
    "aiofiles>=23.2.1,<24.0.0",
    "pathvalidate>=3.2.0,<4.0.0",
    "settings-doc>=4.3.1,<5.0.0",
    "rich>=14.1.0,<15.0.0",
    "tomlkit>=0.13.3,<1.0.0",
]

keywords = ["pawchive", "cli-app", "downloader", "asyncio", "pydantic", "os-independent"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Development Status :: 5 - Production/Stable",
    "Topic :: Terminals",
]

[project.urls]
Homepage = "https://ktoolbox.readthedocs.io/"
Repository = "https://github.com/Ljzd-PRO/KToolBox"
Documentation = "https://ktoolbox.readthedocs.io/"
"Bug Tracker" = "https://github.com/Ljzd-PRO/KToolBox/issues"

[project.scripts]
ktoolbox = "ktoolbox.__main__:main"

[project.optional-dependencies]
uvloop = ["uvloop>=0.19,<0.22; sys_platform != 'win32'"]
winloop = ["winloop>=0.1.6; sys_platform == 'win32'"]
urwid = [
    "urwid>=2.6.16,<3.0.0; sys_platform != 'win32'",
    "urwid[curses]>=2.6.16,<3.0.0; sys_platform == 'win32'",
]
webui = [
    "aiosqlite>=0.20,<1.0",
    "argon2-cffi>=23.1,<26.0",
    "docstring-parser>=0.16,<1.0",
    "fastapi>=0.115,<1.0",
    "filelock>=3.18,<4.0",
    "uvicorn>=0.34,<1.0",
]

[tool.poetry]
packages = [{ include = "ktoolbox" }]

[tool.poetry.group.pyinstaller.dependencies]
pyinstaller = "==6.15.0"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.5.3"
mkdocs-static-i18n = "^1.2.0"
mkdocs-material = "^9.4.14"
mike = "^2.0.0"

[tool.poetry.group.test.dependencies]
pytest = ">=8.4,<9.0"
pytest-asyncio = ">=1.2,<2.0"
pytest-cov = ">=7.0,<8.0"
pytest-socket = ">=0.7,<0.8"
respx = ">=0.23,<0.24"

[tool.poetry.group.dev.dependencies]
datamodel-code-generator = ">=0.57,<0.58"
openapi-spec-validator = ">=0.9,<0.10"
ruff = ">=0.15,<0.16"
mypy = ">=2.3,<2.4"

[tool.poetry.group.pyinstaller]
optional = true

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.test]
optional = true

[tool.poetry.group.dev]
optional = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "-ra --strict-config --strict-markers -W error --disable-socket --allow-unix-socket"
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["ktoolbox"]
omit = ["ktoolbox/api/generated/*"]

[tool.coverage.report]
fail_under = 85
show_missing = true
skip_covered = true

[tool.ruff]
target-version = "py310"
line-length = 120
extend-exclude = ["ktoolbox/api/generated"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "UP", "B", "ASYNC"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.10"
plugins = ["pydantic.mypy"]
exclude = ["^ktoolbox/api/generated/"]
warn_unused_configs = true

[[tool.mypy.overrides]]
module = ["ktoolbox.api", "ktoolbox.api.*"]
strict = true

[[tool.mypy.overrides]]
module = ["ktoolbox.editor"]
ignore_errors = true
